# porte-manteau-pedia

./: LICENSE  README.md  porte-manteau-pedia.cabal  stack.yaml
src/: Main.hs
