name:                porte-manteau-pedia
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/mmai/porte-manteau-pedia#readme
license:             BSD3
license-file:        LICENSE
author:              Henri Bourcereau
maintainer:          henri.bourcereau@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable porte-manteau-pedia
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, wreq, lens, bytestring, word8, hxt, HandsomeSoup, regex-compat, regex-tdfa, chatter, tokenize
